--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,10 +79,10 @@
 }
 
 .hero .hero_content .hero_content-btns input {
-  padding: 0 0 0 2rem;
+  padding-left: 1rem;
   margin-top: 25px;
   margin-right: 16px;
-  border: 0.625px solid #07043b;
+  border: none;
   box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.15925);
   border-radius: 3.125px;
   width: 320px;
@@ -209,4 +209,158 @@
   letter-spacing: 0.4px;
 
   color: #07043b;
+}
+
+/* ========= FOOTER START ========= */
+
+.footer .footer_cta {
+  background-image: url("../image/footer_cta.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 369.71px;
+  padding-top: 6rem;
+  box-sizing: border-box;
+  position: relative;
+  top: -3rem;
+}
+
+.footer_cta .footer_cta_content {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  gap: 2rem;
+}
+
+.footer_cta .footer_cta_content h2 {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 48px;
+  /* identical to box height, or 150% */
+
+  color: #ffffff;
+}
+
+.footer_cta .footer_cta_content p {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+
+.footer_cta .footer_cta_btns {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.footer_cta .footer_cta_btns input {
+  padding-left: 1rem;
+
+  border: none;
+  background: #ffffff;
+  box-shadow: 2px 3px 6px rgba(7, 4, 59, 0.157043);
+  border-radius: 3.125px;
+  width: 480px;
+  height: 48px;
+  margin-top: 2rem;
+  outline: none;
+}
+
+.footer_cta .footer_cta_btns button {
+  border: 2px solid #2f65f8;
+  background: #2f65f8;
+  box-shadow: 2px 3px 6px rgba(7, 4, 59, 0.157043);
+  border-radius: 3.125px;
+  width: 200px;
+  height: 48px;
+
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  color: #ffffff;
+}
+
+/* ========= FOOTER END ========= */
+
+.sector_footer {
+  background-image: url("../image/footer_backgroud.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 391px;
+  position: relative;
+  top: -3rem;
+}
+
+.footer_content {
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.footer_menu {
+  display: flex;
+  justify-content: start;
+  gap: 14rem;
+}
+
+.footer_menu i {
+  color: #ffffff;
+}
+
+.footer_menu a {
+  text-decoration: none;
+}
+
+.footer_menu .contacts .phone_number i {
+  transform: rotate(-45deg);
+}
+
+.footer_menu .contacts a {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
+  color: #ffffff;
+}
+
+.footer_menu ul li {
+  margin-bottom: 1rem;
+}
+
+.footer_menu ul li a {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  /* identical to box height */
+  color: #ffffff;
+}
+
+.footer_menu .social_networks {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.footer_menu .social_networks div a i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 31px;
+  height: 31px;
+  border: 0.918357px solid #dfe4f0;
+  border-radius: 50%;
 }
