--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+header {
+  padding-bottom: 108px;
+}
+
 .nav {
   margin: 3rem 0 9rem 0;
 }
@@ -90,21 +94,20 @@
   outline: none;
 }
 
+/* ========= MAIN START ========= */
+
 .productive .productive_backgroud {
   background-image: url("../image/Rectangle_backgroud.png");
   background-repeat: no-repeat;
   background-position: top;
   /* background-size: cover; */
   box-sizing: border-box;
-  margin-top: 108px;
   padding: 12rem 0 0 0;
-
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
   min-height: 855.37px;
 }
-
-/* .productive_backgroud .productive_image {
-  margin: 14rem 3rem 0 0;
-} */
 
 .productive_backgroud .productive_content h2 {
   font-family: "Raleway";
@@ -117,6 +120,7 @@
 }
 
 .productive_backgroud .productive_content p {
+  width: 80%;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -169,6 +173,7 @@
 }
 
 .productive_content .letter p {
+  width: 100%;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -211,151 +216,141 @@
   color: #07043b;
 }
 
-/* ========= FOOTER START ========= */
+/*===================================
+========== MAIN signIn START =========
+ ====================================*/
 
-.footer .footer_cta {
-  background-image: url("../image/footer_cta.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 369.71px;
-  padding-top: 6rem;
-  box-sizing: border-box;
-  position: relative;
-  top: -3rem;
+.signIn {
+  background-color: #575988;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  min-height: 200px;
+  padding: 8rem 0 3rem 0;
 }
 
-.footer_cta .footer_cta_content {
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  gap: 2rem;
-}
-
-.footer_cta .footer_cta_content h2 {
-  font-family: "Raleway", sans-serif;
+.signIn .signIn_content h3 {
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
   line-height: 48px;
   /* identical to box height, or 150% */
-
   color: #ffffff;
+  margin-bottom: 1rem;
 }
 
-.footer_cta .footer_cta_content p {
+.signIn .signIn_content p {
+  width: 70%;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   /* or 150% */
+
   letter-spacing: 0.5px;
   color: #ffffff;
 }
 
-.footer_cta .footer_cta_btns {
+.signIn .signIn_btns form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   justify-content: center;
 }
 
-.footer_cta .footer_cta_btns input {
+.signIn .signIn_btns input {
   padding-left: 1rem;
-
   border: none;
+  outline: none;
+  box-sizing: border-box;
   background: #ffffff;
   box-shadow: 2px 3px 6px rgba(7, 4, 59, 0.157043);
   border-radius: 3.125px;
+  margin-bottom: 1rem;
+
   width: 480px;
   height: 48px;
-  margin-top: 2rem;
-  outline: none;
 }
 
-.footer_cta .footer_cta_btns button {
+.signIn .signIn_btns button {
   border: 2px solid #2f65f8;
   background: #2f65f8;
   box-shadow: 2px 3px 6px rgba(7, 4, 59, 0.157043);
   border-radius: 3.125px;
-  width: 200px;
-  height: 48px;
 
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
+
   color: #ffffff;
+
+  width: 200px;
+  height: 48px;
 }
 
-/* ========= FOOTER END ========= */
+/* ========= MAIN signIn END ========= */
+/* ========= MAIN END ========= */
 
-.sector_footer {
-  background-image: url("../image/footer_backgroud.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 391px;
-  position: relative;
-  top: -3rem;
+/* ========= FOOTER START ========= */
+
+.footer{
+  background-color:  #07043B;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 5rem 0 5rem 0;
 }
 
-.footer_content {
-  padding-top: 80px;
+.footer_logo{
+  margin-bottom: 2rem;
+}
+
+.footer_content{
   display: flex;
   flex-direction: column;
-  gap: 3rem;
 }
 
-.footer_menu {
-  display: flex;
-  justify-content: start;
-  gap: 14rem;
-}
-
-.footer_menu i {
-  color: #ffffff;
-}
-
-.footer_menu a {
+.footer_content a{
   text-decoration: none;
+  font-family: "Raleway", sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 22px;
+/* identical to box height */
+
+
+color: #FFFFFF;
 }
 
-.footer_menu .contacts .phone_number i {
-  transform: rotate(-45deg);
+.footer_content ul{
+  line-height: 2rem;
 }
 
-.footer_menu .contacts a {
+.phone_number a, .email a{
+  display: flex;
+  justify-content: flex-start;
+  font-family: none;
+  gap: 1rem;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   /* identical to box height, or 150% */
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
-.footer_menu ul li {
-  margin-bottom: 1rem;
-}
-
-.footer_menu ul li a {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  /* identical to box height */
-  color: #ffffff;
-}
-
-.footer_menu .social_networks {
+.social_networks{
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
+ justify-content: flex-start;
+ gap: 1rem;
 }
 
-.footer_menu .social_networks div a i {
+.social_networks div{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -364,3 +359,15 @@
   border: 0.918357px solid #dfe4f0;
   border-radius: 50%;
 }
+
+
+
+
+
+.phone_icon i{
+  transform: rotate(-45deg);
+}
+
+
+
+/* ========= FOOTER END ========= */
