--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-header {
+.header {
   padding-bottom: 108px;
 }
 
@@ -100,12 +100,10 @@ header {
   background-image: url("../image/Rectangle_backgroud.png");
   background-repeat: no-repeat;
   background-position: top;
-  /* background-size: cover; */
+  background-size: cover;
   box-sizing: border-box;
   padding: 12rem 0 0 0;
-  max-width: 1440px;
-  width: 100%;
-  margin: 0 auto;
+
   min-height: 855.37px;
 }
 
@@ -222,9 +220,6 @@ header {
 
 .signIn {
   background-color: #575988;
-  max-width: 1440px;
-  width: 100%;
-  margin: 0 auto;
   min-height: 200px;
   padding: 8rem 0 3rem 0;
 }
@@ -297,41 +292,38 @@ header {
 
 /* ========= FOOTER START ========= */
 
-.footer{
-  background-color:  #07043B;
-  max-width: 1440px;
-  width: 100%;
-  margin: 0 auto;
+.footer {
+  background-color: #07043b;
   padding: 5rem 0 5rem 0;
 }
 
-.footer_logo{
+.footer_logo {
   margin-bottom: 2rem;
 }
 
-.footer_content{
+.footer_content {
   display: flex;
   flex-direction: column;
 }
 
-.footer_content a{
+.footer_content a {
   text-decoration: none;
   font-family: "Raleway", sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-/* identical to box height */
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  /* identical to box height */
 
-
-color: #FFFFFF;
+  color: #ffffff;
 }
 
-.footer_content ul{
+.footer_content ul {
   line-height: 2rem;
 }
 
-.phone_number a, .email a{
+.phone_number a,
+.email a {
   display: flex;
   justify-content: flex-start;
   font-family: none;
@@ -341,16 +333,16 @@ color: #FFFFFF;
   font-size: 16px;
   line-height: 24px;
   /* identical to box height, or 150% */
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
-.social_networks{
+.social_networks {
   display: flex;
- justify-content: flex-start;
- gap: 1rem;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 
-.social_networks div{
+.social_networks .icon_border {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -360,14 +352,8 @@ color: #FFFFFF;
   border-radius: 50%;
 }
 
-
-
-
-
-.phone_icon i{
+.phone_icon i {
   transform: rotate(-45deg);
 }
-
-
 
 /* ========= FOOTER END ========= */
